--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: go
 go:
-- 1.4
 - tip
 install:
-- go get .
+- go get ./...
 before_install:
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
