--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ go:
 install:
 - go get ./...
 before_install:
+  - go get github.com/stretchr/testify/...
   - go get github.com/axw/gocov/gocov
   - go get github.com/mattn/goveralls
   - if ! go get github.com/golang/tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
