--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: go
 go:
-- tip
-install:
-- go get ./...
+  - tip
 before_install:
   - go get github.com/stretchr/testify/...
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
+install:
+  - go get ./...
 script:
   - go build
   - go test -v ./...
+  - go test -covermode=count -coverprofile=profile.cov
+  - $HOME/gopath/bin/goveralls -coverprofile=profile.cov -repotoken S7Knqu960fkLwIysF9Zi3YdpZeyoKv0TR
